fixed side menu collapse menu items

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -7,22 +7,25 @@
   right: 0px;
   width: 100%;
   height: 100%;
-  z-index: 1;
 }
 
 .side-container {
-  z-index: 10;
+  z-index: 100;
   margin-top: -40px;
 }
+
 .side {
     border-right: 1px solid #BDB9BB;
     background-color: white;
     box-shadow: 5px 0 10px -2px rgba(0, 0, 0, 0.2);
     margin-left: -24px;
+    z-index: 100;
 }
+
 .navbar-offset {
     margin-top: 40px;
 }
+
 .logo{
     margin: 20px 0 10px 0;
     padding: 20px 10px 10px 10px;
@@ -30,11 +33,25 @@
     display: block;
     width: 100%;
 }
+
+.menu-link {
+    color: white;
+
+}
+
+.menu-body {
+    background: white;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .menu-tag-line{
     background: #fad308;
     padding: 10px 10px 10px 20px;
     margin: 0 10px 0 10px;
 }
+
 .menu-get-started{
     background: #1fa2dc;
     color: white;
@@ -129,4 +146,48 @@
 	border-top: 8px solid #999999;
   border-bottom: none;
   margin-left: 5px;
+}
+
+.col-xs-11, .col-sm-11-5
+{
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col-xs-11-5, {
+    float: left;
+}
+
+.col-xs-11-5 {
+    width: 96%;
+}
+
+@media (min-width: 768px) {
+    .col-sm-11-5{
+        float: left;
+    }
+    .col-sm-11-5 {
+        width: 96%;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-11-5 {
+        float: left;
+    }
+
+    .col-md-11-5 {
+        width: 96%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-11-5 {
+        float: left;
+    }
+    .col-lg-11-5 {
+        width: 96%;
+    }
 }
